feat: add invitation delete feature
